Adicionando possibilidade de conxão com Postgre, e mais de um banco de dados passando o nome do banco como parâmetro

--- a/api/.env
+++ b/api/.env
@@ -2,12 +2,20 @@
 PHP_DISPLAY_ERRORS=1
 PHP_DISPLAY_STARTUP_ERRORS=1
 
-# Configurações da base de dados MySQL
-MYSQL_DRIVER=MySQL
-MYSQL_HOST=db
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=rootpassword
-MYSQL_DATABASE=bifrost
-MYSQL_USER=bifrost
-MYSQL_PASSWORD=passwordBifrost
-MYSQL_ROOT_HOST=%
+# Configurações de banco de dados
+SQL_DRIVER=MySQL
+SQL_HOST=db
+SQL_PORT=3306
+SQL_ROOT_PASSWORD=rootpassword
+SQL_DATABASE=bifrost
+SQL_USER=bifrost
+SQL_PASSWORD=passwordBifrost
+SQL_ROOT_HOST=%
+
+# Configuração de banco de dados com o nome "bifrost"
+BIFROST_SQL_DRIVER=PostgreSQL
+BIFROST_SQL_HOST=database
+BIFROST_SQL_PORT=5432
+BIFROST_SQL_DATABASE=bifrost
+BIFROST_SQL_USER=bifrost
+BIFROST_SQL_PASSWORD=passwordBifrost
