Adicionando suporte ao Xdebug e configurando php.ini para otimização de uploads e logs

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     volumes:
       - ./:/var/www/html
       - bifrost-storage:/storage
+      - ./tmp:/var/log/xdebug
     networks:
       - bifrost-network
     depends_on:
