--- a/api/.env
+++ b/api/.env
@@ -2,6 +2,12 @@
 PHP_DISPLAY_ERRORS=1
 PHP_DISPLAY_STARTUP_ERRORS=1
 
+# Configurações da sessão
+SESSION_SAVE_HANDLER = redis
+SESSION_SAVE_PATH = tcp://redis:6379
+SESSION_GC_MAXLIFETIME = 43200
+SESSION_COOKIE_LIFETIME = 43200
+
 # Configurações de banco de dados
 SQL_DRIVER=MySQL
 SQL_HOST=db
