Atualizando configurações de ambiente e Docker para suporte a PostgreSQL e melhorias no gerenciamento de sessões com Redis

--- a/api/.env
+++ b/api/.env
@@ -1,27 +1,24 @@
 # Configurações do php
-PHP_DISPLAY_ERRORS=1
-PHP_DISPLAY_STARTUP_ERRORS=1
+PHP_DISPLAY_ERRORS=0
+PHP_DISPLAY_STARTUP_ERRORS=0
 
 # Configurações da sessão
-SESSION_SAVE_HANDLER = redis
-SESSION_SAVE_PATH = tcp://redis:6379
-SESSION_GC_MAXLIFETIME = 43200
-SESSION_COOKIE_LIFETIME = 43200
+PHP_SESSION_SAVE_HANDLER = redis
+PHP_SESSION_SAVE_PATH = tcp://redis:6379
+PHP_SESSION_GC_MAXLIFETIME = 43200
+PHP_SESSION_COOKIE_LIFETIME = 43200
 
-# Configurações de banco de dados
-SQL_DRIVER=MySQL
-SQL_HOST=db
-SQL_PORT=3306
-SQL_ROOT_PASSWORD=rootpassword
+# Configuração do cache redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# Configuração de banco de dados
+SQL_DRIVER=PostgreSQL
+SQL_HOST=database
+SQL_PORT=5432
 SQL_DATABASE=bifrost
 SQL_USER=bifrost
 SQL_PASSWORD=passwordBifrost
-SQL_ROOT_HOST=%
 
-# Configuração de banco de dados com o nome "bifrost"
-BIFROST_SQL_DRIVER=PostgreSQL
-BIFROST_SQL_HOST=database
-BIFROST_SQL_PORT=5432
-BIFROST_SQL_DATABASE=bifrost
-BIFROST_SQL_USER=bifrost
-BIFROST_SQL_PASSWORD=passwordBifrost
+# Configurações de desenvolvimento
+INSTALL_XDEBUG=false
