Criando diretório de sessões e configurando permissões no Dockerfile para PHP
Signed-off-by: Felipe Cavalca <flpsnocvla@gmail.com>

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -20,6 +20,11 @@ RUN echo "upload_max_filesize = 1G" >> /usr/local/etc/php/php.ini
 RUN echo "post_max_size = 1G" >> /usr/local/etc/php/php.ini
 RUN echo "memory_limit = 1G" >> /usr/local/etc/php/php.ini
 
+# Criando o diretório de sessões e configurando permissões
+RUN mkdir -p /var/lib/php/sessions
+RUN chown -R www-data:www-data /var/lib/php/sessions
+RUN echo "session.save_path = /var/lib/php/sessions" >> /usr/local/etc/php/php.ini
+
 RUN service apache2 restart
 
 EXPOSE 80
