Adiciona configurações de conexão com o storage no arquivo .env e atualiza docker-compose.yml para incluir o serviço bifrost-storage

--- a/api/.env
+++ b/api/.env
@@ -8,9 +8,13 @@ PHP_SESSION_SAVE_PATH = tcp://redis:6379
 PHP_SESSION_GC_MAXLIFETIME = 43200
 PHP_SESSION_COOKIE_LIFETIME = 43200
 
-# Configuração do cache redis
+# Configuração do cache redis para API e Storage
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# Configuração de conexao com o storage
+STORAGE_HOST=http://bifrost-storage:80
+STORAGE_API_KEY=1234
 
 # Configuração de banco de dados
 SQL_DRIVER=PostgreSQL
@@ -20,5 +24,7 @@ SQL_DATABASE=bifrost
 SQL_USER=bifrost
 SQL_PASSWORD=passwordBifrost
 
-# Configurações de desenvolvimento
-INSTALL_XDEBUG=false
+# Configuração do storage
+FAILOVER_TOLERANCE=0
+DIR_DISKS=/disks
+AUTH_BIFROST=1234
