Adiciona rede ao serviço bifrost-tests no docker-compose

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -64,6 +64,8 @@ services:
       - "81:80"
     volumes:
        - ./tests:/tests
+    networks:
+      - bifrost-back-network
     mem_limit: 256m
     cpus: '0.25'
 
