--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -2,39 +2,13 @@ services:
 
   api:
     build:
-      context: ./
-      dockerfile: ./Dockerfile.dev
+      dockerfile: ./Dockerfile.dev # DEV
     ports:
       - "80:80"
-    environment:
-      # Configurações do php
-      PHP_DISPLAY_ERRORS: 0
-      PHP_DISPLAY_STARTUP_ERRORS: 0
-
-      # Configurações da sessão
-      PHP_SESSION_SAVE_HANDLER: redis
-      PHP_SESSION_SAVE_PATH: tcp://redis:6379
-      PHP_SESSION_GC_MAXLIFETIME: 43200
-      PHP_SESSION_COOKIE_LIFETIME: 43200
-
-      # Configuração do redis para cache e session
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-
-      # Configuração de conexao com o storage
-      STORAGE_HOST: http://bifrost-storage:80
-      STORAGE_API_KEY: 1234
-
-      # Configuração de banco de dados
-      SQL_DRIVER: PostgreSQL
-      SQL_HOST: database
-      SQL_PORT: 5432
-      SQL_DATABASE: bifrost
-      SQL_USER: bifrost
-      SQL_PASSWORD: passwordBifrost
+    env_file:
+      - ./../.env
     volumes:
       - ./:/var/www/html # DEV
-      - ./tmp:/var/log/xdebug # DEV
     networks:
       - bifrost-back-network
     mem_limit: 256m
@@ -42,15 +16,8 @@ services:
 
   bifrost-storage:
     image: ghcr.io/felipe-cavalca/bifrostphp-storage:latest
-    environment:
-      # Configurações do storage
-      FAILOVER_TOLERANCE: 0
-      DIR_DISKS: /disks
-      AUTH_BIFROST: 1234
-
-      # Configuração do redis para fila
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
+    env_file:
+      - ./../.env
     volumes:
       - bifrost-storage:/disks/ssd_1
     networks:
@@ -62,6 +29,8 @@ services:
     image: ghcr.io/felipe-cavalca/bifrostphp-tests:1.2.1-7
     ports:
       - "81:80"
+    env_file:
+      - ./../.env
     volumes:
        - ./tests:/tests
     networks:
