--- a/api/supervisord.conf
+++ b/api/supervisord.conf
@@ -1,5 +1,7 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisor/supervisord.pid
 
 [program:apache2]
 command=/usr/sbin/apache2ctl -D FOREGROUND
