Criando objetos para adicionar e processar tarefas da fila

--- a/api/supervisord.conf
+++ b/api/supervisord.conf
@@ -10,7 +10,7 @@ autorestart=true
 priority=10
 
 [program:worker]
-command=php /var/www/html/core/worker.php
+command=php /var/www/html/Worker.php
 numprocs=4
 process_name=%(program_name)s_%(process_num)02d
 autostart=true
