--- a/api/supervisord.conf
+++ b/api/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisor/supervisord.pid
 
-[program:apache2]
-command=/usr/sbin/apache2ctl -D FOREGROUND
+[program:php-fpm]
+command=/usr/local/sbin/php-fpm -F
 autostart=true
 autorestart=true
 priority=10
