--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,46 +1,44 @@
 # Dockerfile.api
-FROM php:8.3-apache
+FROM php:8.3-fpm
 
-# Atualizando pacotes do sistema
-RUN apt-get update && apt-get upgrade -y && apt-get clean && rm -rf /var/lib/apt/lists/*
+# Atualizando pacotes do sistema e instalando dependências necessárias
+RUN apt-get update \
+    && apt-get upgrade -y \
+    && apt-get install -y --no-install-recommends \
+        supervisor \
+        libpq-dev \
+    && docker-php-ext-install pdo_mysql pdo_pgsql \
+    && pecl install redis \
+    && docker-php-ext-enable redis \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copiando os arquivos da aplicação
 COPY ./ /var/www/html
 
-# Ativando módulos do Apache
-RUN a2enmod rewrite
-RUN a2enmod headers
-
-# Instalando extensões PHP necessárias
-RUN docker-php-ext-install pdo_mysql
-
-# Instalando a extensão PDO para PostgreSQL
-RUN apt-get update && apt-get install -y libpq-dev \
-    && docker-php-ext-install pdo_pgsql \
-    && apt-get install -y supervisor
-
-# Instalando a extensão PHP Redis
-RUN pecl install redis && docker-php-ext-enable redis
-
-# Configurando o php.ini
-RUN echo "upload_max_filesize = 1G" >> /usr/local/etc/php/php.ini
-RUN echo "post_max_size = 1G" >> /usr/local/etc/php/php.ini
-RUN echo "memory_limit = 1G" >> /usr/local/etc/php/php.ini
-RUN echo "session.save_path = /var/lib/php/sessions" >> /usr/local/etc/php/php.ini
+# Configurações do PHP (inclui otimizações de desempenho)
+RUN mkdir -p /usr/local/etc/php/conf.d \
+    && echo "upload_max_filesize = 1G" > /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "post_max_size = 1G" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "memory_limit = 1G" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "session.save_path = /var/lib/php/sessions" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "opcache.enable=1" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "opcache.memory_consumption=256" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "opcache.interned_strings_buffer=16" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "opcache.max_accelerated_files=10000" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "opcache.revalidate_freq=0" >> /usr/local/etc/php/conf.d/bifrost.ini \
+    && echo "opcache.validate_timestamps=0" >> /usr/local/etc/php/conf.d/bifrost.ini
 
 # Criando o diretório de sessões e configurando permissões
-RUN mkdir -p /var/lib/php/sessions
-RUN chown -R www-data:www-data /var/lib/php/sessions
+RUN mkdir -p /var/lib/php/sessions \
+    && chown -R www-data:www-data /var/lib/php/sessions
 
-# Criando diretórios para o supervisor
-RUN mkdir -p /var/run/supervisor
-RUN mkdir -p /var/log/supervisor
+# Copiando a configuração do Supervisor
+RUN mkdir -p /var/run/supervisor /var/log/supervisor
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# Copia a configuração do supervisord
-COPY ./supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+# Expõe a porta do PHP-FPM
+EXPOSE 9000
 
-# Expõe a porta HTTP
-EXPOSE 80
-
-# Inicia supervisor para rodar Apache + worker
+# Inicia supervisor para rodar PHP-FPM e o worker
 CMD ["/usr/bin/supervisord"]
