Simplifica nginx.conf e processa api somente se url começar com /api

--- a/api/nginx.conf
+++ b/api/nginx.conf
@@ -1,17 +1,11 @@
 worker_processes auto;
-pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout 65;
-
+    # Define o backend PHP-FPM
     upstream api_backend {
         server api1:9000;
         server api2:9000;
@@ -19,26 +13,29 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
-        root /var/www/html;
-        index index.php;
-        autoindex off;
+
+        # Permite CORS básico
         add_header Access-Control-Allow-Origin *;
 
-        location / {
-            try_files $uri $uri/ @rewrite;
+        # Rota para API, só URLs que começam com /api
+        location /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
+            
+            try_files $uri $uri/ @api_rewrite;
         }
 
-        location @rewrite {
+        # Reescreve a URL para o formato do projeto
+        location @api_rewrite {
             rewrite ^/([^/]+)/?([^/]*)/?(.*)$ /index.php?_controller=$1&_action=$2&_params=$3&$args last;
             rewrite ^ /index.php$is_args$args last;
         }
 
+        # Processa arquivos PHP via FastCGI
         location ~ \.php$ {
-            fastcgi_pass   api_backend;
-            fastcgi_index  index.php;
-            include        fastcgi_params;
-            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_pass api_backend;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
         }
     }
 }
