--- a/tests/api/docker-compose.yml
+++ b/tests/api/docker-compose.yml
@@ -6,6 +6,5 @@ services:
       context: ../..   # raiz do projeto
       dockerfile: tests/api/Dockerfile
     volumes:
-      - ../../api:/app/api:ro
-      - ./:/app/tests/api
+      - ../../:/app
     command: ["phpunit", "--configuration", "tests/api/phpunit.xml"]
