importando .env nos testes

--- a/tests/api/docker-compose.yml
+++ b/tests/api/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ../..   # raiz do projeto
       dockerfile: tests/api/Dockerfile
+    env_file:
+      - ../../.env
     volumes:
       - ../../:/app
     command: ["phpunit", "--configuration", "tests/api/phpunit.xml"]
